[FIX] WINNER LINE WRONG POSITION

--- a/styles-large.css
+++ b/styles-large.css
@@ -1,9 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:100&display=swap");
-
 /* Styles for screens with a minimum width of 1025px */
 @media (min-width: 1025px) {
-  
-.body {
+  .body {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,12 +10,12 @@
     background-size: cover;
     font-family: "Lato", sans-serif;
   }
-  
+
   .player-icon-image {
     height: 25px;
     width: 28px;
   }
-  
+
   button {
     color: white;
     width: 180px;
@@ -30,13 +27,13 @@
     transition: 1s ease-in-out;
     font-size: larger;
   }
-  
+
   .board {
     width: 550px;
     height: 550px;
     background-color: white;
   }
-  
+
   .board-inner {
     display: flex;
     flex-direction: column;
@@ -45,7 +42,7 @@
     width: 550px;
     height: 550px;
   }
-  
+
   .box {
     margin: 15px;
     width: 150px;
@@ -54,20 +51,20 @@
     background-size: contain;
     background-repeat: no-repeat;
   }
-  
+
   .o {
     background-image: url(assets/o.png);
   }
-  
+
   .x {
     background-image: url(assets/x.png);
   }
-  
+
   .you-win-div {
     background-color: cadetblue;
     align-items: center;
   }
-  
+
   .center-div {
     border: 1px solid;
     position: absolute;
@@ -76,7 +73,7 @@
     transform: translate(-50%, -50%);
     padding: 25px;
   }
-  
+
   .center-div-non-solid {
     position: absolute;
     top: 50%;
@@ -84,4 +81,17 @@
     transform: translate(-50%, -50%);
     padding: 25px;
   }
+
+  .canvas-container
+  {
+    width: 550px;
+    height: 550px;
+    background-color: transparent"
   }
+
+  .canvas{
+    width: 450px;
+    height: 250px;
+    background-color: transparent;
+  }
+}
