--- a/styles-small.css
+++ b/styles-small.css
@@ -1,17 +1,111 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:100&display=swap");
-
 /* Styles for screens with a maximum width of 768px */
 @media (max-width: 768px) {
-    .body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        background-image: url(https://wallpapercave.com/dwp1x/wp2794478.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        font-family: "Lato", sans-serif;
-      }
-  
-    /* Modify other styles as needed */
+  .body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;        
+    font-family: "Lato", sans-serif;
+    background-color: #1D4798;
   }
+
+  .player-icon-image {
+    height: 25px;
+    width: 28px;
+  }
+
+  button {
+    color: white;
+    width: 180px;
+    height: 60px;
+    cursor: pointer;
+    border-radius: 12px;
+    background: transparent;
+    border: 1px solid #91c9ff;
+    outline: none;
+    transition: 1s ease-in-out;
+    font-size: larger;
+  }
+
+  .board {
+    width: 250px;
+    height: 250px;
+    background-color: white;
+  }
+
+  .board-inner {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    background-color: #91c9ff;
+    width: 250px;
+    height: 250px;
+  }
+
+  .box {
+    margin: 15px;
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+  .o {
+    background-image: url(assets/o.png);
+  }
+
+  .x {
+    background-image: url(assets/x.png);
+  }
+
+  .you-win-div {
+    background-color: cadetblue;
+    align-items: center;
+  }
+
+  .center-div {
+    border: 1px solid;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 25px;
+  }
+
+  .center-div-non-solid {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 25px;
+  }
+
+  .select-players-div-space-between-elements {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;    
+    gap: 10px;
+  }
+
+  .space-between-elements-select-player-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;    
+    align-items: center;
+    gap: 15px;
+  }
+
+  .canvas-container
+  {
+    width: 300px;
+    height: 190px;
+    background-color: transparent"
+  }
+
+  .canvas{
+    width:200px;
+    height:200px;
+    background-color: transparent;
+  }
+}
